CHange directory images

--- a/beapi.tex
+++ b/beapi.tex
@@ -69,7 +69,7 @@ Las restricciones impuestas en el método Java que abarca las líneas 2 a 11 se 
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.8\textwidth]{images/repOK1.jpg}
+  \includegraphics[width=0.8\textwidth]{images/repok1.jpg}
   \caption{Ejemplo una instancia válida y otra no de acuerdo al RepOK en las configuraciones generales de la estructura.}
   \label{fig:repOK1}
 \end{figure}
@@ -119,7 +119,8 @@ El enfoque propuesto, denominado \textsf{BEAPI} (Bounded Exhaustive from API), i
 
 A diferencia de los enfoques de generación basados en caja negra, \textsf{BEAPI} no requiere una especificación formal de las propiedades de las estructuras. Al igual que otras técnicas de generación exhaustiva acotada (BEG), el usuario solo debe proporcionar los alcances para la generación, que se abordan en detalle en la sección correspondiente.  Esto permite generar estructuras válidas sin requerir una especificación detallada de las propiedades de las estructuras, reduciendo así la carga de trabajo para el programador.
 
-La principal ventaja de \textsf{BEAPI} es que requiere un esfuerzo menor de especificación para realizar la generación exhaustiva acotada. Si los métodos de la API utilizados en la generación son correctos, todas las estructuras generadas serán válidas para su construcción. El programador solo necesita asegurarse de que los métodos de la API lancen excepciones cuando se violen las reglas de uso, siguiendo un estilo de programación defensivo \cite{Liskov00}. En la mayoría de los casos, esto implica verificar condiciones muy simples en las entradas. Por ejemplo, el método para eliminar (\emph{remove(int)}) un elemento de una \texttt{NCL} en un índice pasado como parámetro lanza una \texttt{IllegalArgumentException} cuando se llama con un indice menor a 0 o mayor al \emph{size} de la lista. El \emph{listing} de la figura \ref{fig:algoProgDefensiva}  se puede observar que la implementación del método se encarga de cumplir con la especificación indicada \texttt{NCL}.
+La principal ventaja de \textsf{BEAPI} es que requiere un esfuerzo menor de especificación para realizar la generación exhaustiva acotada. Si los métodos de la API utilizados en la generación son correctos, todas las estructuras generadas serán válidas para su construcción. El programador solo necesita asegurarse de que los métodos de la API lancen excepciones cuando se violen las reglas de uso, siguiendo un estilo de programación defensivo \cite{Liskov00}. En la mayoría de los casos, esto implica verificar condiciones muy simples en las entradas. Por ejemplo, el método para eliminar (\emph{remove(int)}) un elemento de una \texttt{NCL} en un índice pasado como parámetro lanza una \texttt{IllegalArgumentException} cuando se llama con un índice menor a 0 o mayor al \emph{size} de la lista. El \emph{listing} de la figura \ref{fig:algoProgDefensiva}  se puede observar que la implementación del método se encarga de cumplir con la especificación indicada \texttt{NCL}.
+Para hacer esto
 
 
 \begin{figure}[!thb]
@@ -182,7 +183,7 @@ A continuación, explicaremos en detalle cada una de estas optimizaciones.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.85\textwidth]{NCL-instances.png}
+    \includegraphics[width=0.85\textwidth]{images/NCL-instances.png}
     \caption{Tres instancias de NodeCachingLinkedList con exactamente dos nodos}
     \label{fig:ncl-instances}
 \end{figure}
@@ -203,8 +204,21 @@ omit.fields=NCL.DEFAULT_MAXIMUM_CACHE_SIZE
 \label{fig:NCL-fin-BEAPI}
 \end{figure}
 
-\emph{BEAPI} explora el espacio de búsqueda de secuencias de prueba (acotadas) que se pueden formar mediante llamadas a la API. Supongamos el caso de la figura \ref{fig:ncl-instances} de instancias de \texttt{NCL}.  El límite $k$ es un valor entero que representa el número máximo de objetos que se pueden crear para cada clase (en la Figura \ref{fig:ncl-instances}, el número de nodos en los objetos NCL está acotado por $k=2$) y el número máximo de valores primitivos disponibles (por ejemplo, enteros del 0 a $k-1$). Esto asegura que se generen NCL con no más de $k$ nodos. Además, se puede observar en el archivo de configuración, que se especifica con qué cadena de caracteres se van a utilizar los métodos de la API que la requieran. En este caso es str1, str2, str3.
-Por lo tanto, debemos proporcionar dominios de datos para los tipos primitivos utilizados en esas llamadas y establecer un límite en el tamaño máximo de las estructuras que deseamos generar a partir de esas llamadas de API. Para limitar el número de estructuras generadas y establecer los valores primitivos, BE necesita un archivo de descripción simple en formato \texttt{java.properties}, en el que se establecen algunos parámetros. (Figura \ref{fig:NCL-fin-BEAPI}).  La línea 1 del archivo de configuración de \emph{BEAPI} establece el número máximo de objetos que se asignarán para cada clase, en este caso es 2. Esto especifica el número máximo de objetos diferentes (alcanzables desde la raíz) permitidos en una estructura. Las secuencias de prueba generadas por \emph{BEAPI} que crean estructuras que exceden este número (para cualquier clase) se descartan y no se extienden aún más. Esto asegura que se generen solo \texttt{NCL} con no más de 2 nodos. La línea 2 especifica que solo se emplearán enteros del 0 al 2 para invocar rutinas de la API que tomen valores enteros como parámetros (es decir, para insertar un entero en la lista, eliminar un entero, insertar en una posición entera dada, etc.). También se puede especificar dominios para otros tipos primitivos como floats, doubles y strings (linea 3) describiendo sus valores por extensión. Podemos indicarle a \emph{BEAPI} que ignore algunos campos en el proceso de canonización de objetos, que se lleva a cabo en la ejecución de las secuencias de métodos de la API. Esto permite al usuario controlar qué partes de la estructura del objeto son relevantes para la coincidencia de estados (ver más adelante en la sección \ref{sec:stateMatching}). Por ejemplo,  la línea 4 haría que \emph{BEAPI} omita el tamaño máximo predeterminado de la caché en la coincidencia de estados, que en la API de \emph{NCL} es una constante inicializada en 20 en el constructor de la clase. Es importante que aqui se omitan campos que puede afectar la coincidencia de estados, como el caso del campo \emph{modCount}. Esta variable se utiliza a menudo en estructuras de datos para realizar un seguimiento de las modificaciones o cambios realizados en los datos almacenados, pero claramente no afecta la estructura generada. 
+\emph{BEAPI} explora el espacio de búsqueda de secuencias de prueba (acotadas) que se pueden formar mediante llamadas a la API. Supongamos el caso de la figura \ref{fig:ncl-instances} de instancias de \texttt{NCL}.  El límite $k$ es un valor entero que representa el número máximo de objetos que se pueden crear para cada clase (en la Figura \ref{fig:ncl-instances}, el número de nodos en los objetos NCL está acotado por $k=2$). Esto especifica el número máximo de objetos diferentes (alcanzables desde la raíz) permitidos en una estructura. Las secuencias de prueba generadas por \emph{BEAPI} que crean estructuras que exceden este número (para cualquier clase) se descartan y no se extienden
+\cacho{VER BIEN ESTO DE NO EXTENDERSE, porq para crear estrucutras de 3 nodos a veces necesito crear previamente una de 4 nodos}
+Esto asegura que se generen solo \texttt{NCL} con no más de k nodos. Por ejemplo, la figura \ref{fig:scope}, se puede observar que cuando genera una estructura con mas nodos que el especificado en el archivo de configuración, este no sigue extiendo el arbol de búsqueda. En la figura el scope especificado es 3 (vale aclarar, que el nodo ficticio cuanta como nodo de la estructura.)
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.85\textwidth]{images/scope.jpg}
+    \caption{Representación con scope 3 para NCL}
+    \label{fig:scope}
+\end{figure}
+
+
+Siguiedo el analisis del archivo de configuracion de la figura \ref{fig:NCL-fin-BEAPI},
+y el número máximo de valores primitivos disponibles (por ejemplo, enteros del 0 a $k-1$). Esto asegura que se generen NCL con no más de $k$ nodos. Además, se puede observar en el archivo de configuración, que se especifica con qué cadena de caracteres se van a utilizar los métodos de la API que la requieran. En este caso es str1, str2, str3.
+Por lo tanto, debemos proporcionar dominios de datos para los tipos primitivos utilizados en esas llamadas y establecer un límite en el tamaño máximo de las estructuras que deseamos generar a partir de esas llamadas de API. Para limitar el número de estructuras generadas y establecer los valores primitivos, BE necesita un archivo de descripción simple en formato \texttt{java.properties}, en el que se establecen algunos parámetros. (Figura \ref{fig:NCL-fin-BEAPI}).   .  La línea 2 especifica que solo se emplearán enteros del 0 al 2 para invocar rutinas de la API que tomen valores enteros como parámetros (es decir, para insertar un entero en la lista, eliminar un entero, insertar en una posición entera dada, etc.). También se puede especificar dominios para otros tipos primitivos como floats, doubles y strings (linea 3) describiendo sus valores por extensión. Podemos indicarle a \emph{BEAPI} que ignore algunos campos en el proceso de canonización de objetos, que se lleva a cabo en la ejecución de las secuencias de métodos de la API. Esto permite al usuario controlar qué partes de la estructura del objeto son relevantes para la coincidencia de estados (ver más adelante en la sección \ref{sec:stateMatching}). Por ejemplo,  la línea 4 haría que \emph{BEAPI} omita el tamaño máximo predeterminado de la caché en la coincidencia de estados, que en la API de \emph{NCL} es una constante inicializada en 20 en el constructor de la clase. Es importante que aqui se omitan campos que puede afectar la coincidencia de estados, como el caso del campo \emph{modCount}. Esta variable se utiliza a menudo en estructuras de datos para realizar un seguimiento de las modificaciones o cambios realizados en los datos almacenados, pero claramente no afecta la estructura generada. 
 La configuración mostrada en la Figura~\ref{fig:NCL-fin-BEAPI} es suficiente para que \emph{BEAPI} genere NCL con un máximo de 3 nodos, que contienen enteros del 0 al 2 como valores. 
 \\
 % \begin{figure}[h!]
