--- a/builders.tex
+++ b/builders.tex
@@ -92,7 +92,7 @@ Como ilustración, la Figura~\ref{fig:ncl-instances} muestra las tres instancias
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.85\textwidth]{NCL-instances.png}
+    \includegraphics[width=0.85\textwidth]{images/NCL-instances.png}
     \caption{Tres instancias de NodeCachingLinkedList con exactamente dos nodos}
     \label{fig:ncl-instances}
 \end{figure}
